gitops/clusters/secondary/store-service-export-west1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: store
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: store
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
      - name: hello-app
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:2.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: store
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: store
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-west-1
  namespace: store
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: store
  ports:
  - port: 8080
    targetPort: 8080
